# hangman-game

./: .editorconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
github/workflows/: ci.yml
src/hangman_game/: __init__.py  main.py
tests/: test_main.py
